# CEX

./: Cargo.toml  docker-compose.yml
frontend/: .gitignore  package-lock.json  tsconfig.app.json  vite.config.ts  vite.config.ts.bak
frontend/src/: App.tsx  index.css  index.css.bak  types.ts
frontend/src/assets/: hero.png.bak
frontend/src/components/: Balances.tsx  ChainSwitcher.tsx  LivePriceChart.tsx  OpenOrders.tsx  OrderBook.tsx  OrderBook.tsx.bak  OrderForm.tsx  PriceTicker.tsx  RecentTrades.tsx  RecentTrades.tsx.bak
migrations/: 0001_create_schema.sql  0002_add_market_to_orders.sql  0003_add_prices_table.sql
scripts/: dev_up.sh
src/: api.rs  api.rs.bak  db.rs  db.rs.bak  main.rs  main.rs.bak  repo.rs  repo.rs.bak  trade.rs  user.rs
src/matching_engine/: engine.rs  engine.rs.bak  orderbook.rs  orderbook.rs.bak
src/price_feed/: mod.rs
