[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "1.37", features = ["serde-with-str"] }
rust_decimal_macros = "1.37"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"


sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "migrate", "rust_decimal"] }
dotenvy = "0.15"